Bug 155436 - CRASH: exporting to PDF
Summary: CRASH: exporting to PDF
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.4.2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-05-22 12:23 UTC by Xisco Faulí
Modified: 2023-05-31 11:07 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (16.60 KB, text/plain)
2023-05-22 18:50 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-05-22 12:23:30 UTC
Steps to reproduce:
1. Open attachment 128229 [details] from bug 103142
2. Export to PDF

-> Crash

Reproduced in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 4a162c4cdc9fd95bdbeb6a71b9b7689f242c2906
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-05-22 12:24:18 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2023-03-16 19:48:31 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-03-22 11:53:38 +0000
commit e84b310b59825fd572d79def98c3d21566aac603 (patch)
tree 615a52cbf4ad57a5099bbcbfcf825a71edd6c287
parent 7f4b53b1c7c192ecfef35913133239b670070062 (diff)
vcl,drawinglayer,svx,sw,sd: PDF/UA export: Annot StructElem for SdrMediaObj

Bisected with: bibisect-linux64-7.6

Adding Cc: to Michael Stahl
Comment 2 Julien Nabet 2023-05-22 18:50:09 UTC
Created attachment 187440 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I got an assertion.
Comment 3 m_a_riosv 2023-05-22 23:03:50 UTC
Works fine for me on windows:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f4c24da1e7f11664e0d2f688d2531f068e4a3bc0
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 4 Commit Notification 2023-05-26 08:57:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8061cd765c7854667550d6aafda5832715648876

tdf#155436 svx: PDF export: fix crash on SdrMediaObj without URL

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2023-05-26 09:04:47 UTC
fixed on master
Comment 6 Julien Nabet 2023-05-26 12:41:33 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce the assertion (and no crash too). Thank you Michael!
Comment 7 Commit Notification 2023-05-29 08:15:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/6b74f9a6ec67d8b3cf9cfc354e066785919bbd8b

tdf#155436 svx: PDF export: fix crash on SdrMediaObj without URL

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-05-30 19:42:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-4":

https://git.libreoffice.org/core/commit/669ee4ab680736ad87f0e41071eff906e6354480

tdf#155436 svx: PDF export: fix crash on SdrMediaObj without URL

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.