tdf#155436 svx: PDF export: fix crash on SdrMediaObj without URL

Both sw and sd don't call CreateScreen() if there is no URL.

(regression from commit e84b310b59825fd572d79def98c3d21566aac603)

Change-Id: I087511bb6ed41b0e39321f6ca8684f60261f01cf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152282
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 8061cd765c7854667550d6aafda5832715648876)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152228
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>